--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container"></div>
         <div class ="row justify-content-center">
-        <img src="img/logo.png" width="140px">
+        <img src="img/logo.png" width="120px" height="120px">
         </div>
         <div class ="row justify-content-center" style="margin:20px;">
             <p>Crea una plantilla de <b>¿Quien tiene más probabilidad de...?</b> Sube una imagen por cada amiga (mínimo 2 y máximo 6)</p>
