--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class ="row justify-content-center" style="margin:20px;">
-            <p>Crea una plantilla de <b>¿Quien tiene más probabilidad de...?</b> Sube una imagen por cada amiga (mínimo 2 y máximo 6)</p>
+            <p>Crea una plantilla de <b>¿Quien tiene más probabilidad de...?</b> Selecciona una imagen por cada amiga (mínimo 2 y máximo 6)</p>
         </div>
         <div class ="row justify-content-center">
             <div class="col-md-auto">
@@ -432,8 +432,8 @@
                 canvas.add(new fabric.Text('Por favor selecciona entre 2 y 6 imágenes', { 
                 fontFamily: 'Montserrat', 
                 color: "black",
+                textAlign: 'center',
                 fontSize: 20,
-                left: 40, 
                 top: 100 
             }));
             }
